[build-system]
requires = [
    "meson-python>=0.16.0",
    "meson>=1.1.0",
    "setuptools_scm>=8.0",
    "Cython>=3.0",
]
build-backend = "mesonpy"

[project]
name = "pyfuse3"
dynamic = ["version"]
description = "Python 3 bindings for libfuse 3 with async I/O support"
readme = "README.rst"
requires-python = ">=3.10"
license = "LGPL-2.1-or-later"
authors = [
    {name = "Nikolaus Rath", email = "Nikolaus@rath.org"}
]
keywords = ["FUSE", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
dependencies = [
    "trio >= 0.15",
]

[project.urls]
Homepage = "https://github.com/libfuse/pyfuse3"

[dependency-groups]
dev = [
    "pytest >= 3.4.0",
    "pytest-trio",
    "sphinx",
    "twine",
]

[tool.setuptools_scm]

# Meson-python configuration
[tool.meson-python.args]
# Add any meson-specific build arguments if needed

